IntHashMap/LongHashMap/CharHashMap.foreachUpdate 待删除key缓冲改为小容量起步+倍增扩容
new int[size()]的分配正比于map大小而与删除条目数无关：大map删少量key时（千万条删1条的极端约80MB）一次性分配用完即丢。改为固定8起步、写满倍增（ArrayList策略），内存正比于删除数（上界2倍），全删的极端情况也不劣于原实现。行为不变的优化，TestIntHashMap补充批量删除用例（100条删33条+混合更新）覆盖扩容路径作回归保护。

附带：tableSize的Math.min(Math.max(...))改用Math.clamp（等价清理）